# Moinsen

./: .dockerignore  .gitignore  .gitmodules  CMakeBaseFiles.txt  CMakeLists.txt  Dockerfile  PGNtoFEN.jl  Project.toml  README.md  build-linux.sh  libchessCMakeLists.txt  progress.md  testvsold.sh  tournamenttest.sh  tune.jl
.github/workflows/: cmake.yml
docker/: CMakeLists.txt  infer.cpp  vcpkg.json
src/: benchmark.cpp  benchmark.hpp  commontypes.cpp  commontypes.hpp  correctPval.hpp  eval.cpp  eval.hpp  info.cpp  info.hpp  moinsen.cpp  phasedScore.cpp  phasedScore.hpp  pst.cpp  pst.hpp  search.cpp  search.hpp  tune.cpp  uci.hpp
src/oldPST/: allZeroValues.hpp  correct34.hpp  originalPSTs.hpp
tests/: koth.cpp  movetime.cpp  phasedScore.cpp  position.cpp  search.cpp  threecheck.cpp
